--- a/面试/4.12.md
+++ b/面试/4.12.md
@@ -7,7 +7,7 @@ js
 2. 原型的理解
 3. flat
 4. Promise
-5. arguments 的理解 ?
+5. arguments 在箭头函数中没有
 6. es6 的使用
 7. blob createObjectURL
 
@@ -27,7 +27,7 @@ HTTP
 VUE
 1. vue watch dep
 2. 双向绑定原理
-3. nextTick原理
+3. nextTick 原理
 4. vue3 proxy 的优化
 5. computed watch的区别
 
@@ -41,5 +41,7 @@ Webpack
 three
 1. 矩阵变换
 
-
+其他
 1. 瀑布流开发模式
+2. 预渲染 与 SSR
+
