--- a/面试/4.12.md
+++ b/面试/4.12.md
@@ -37,6 +37,7 @@ Webpack
 1. webpack 插件加载机制 complile 钩子
 2. loader plugin
 3. webpack 编译优化
+4. 打包分析工具 speed-measure-webpack-plugin / webpack-bundle-analyzer
 
 three
 1. 矩阵变换
@@ -44,4 +45,5 @@ three
 其他
 1. 瀑布流开发模式
 2. 预渲染 与 SSR
+3. cnpm npm yarn
 
