--- a/面试/4.12.md
+++ b/面试/4.12.md
@@ -5,11 +5,11 @@
 js 
 1. bind apply call
 2. 原型的理解
-3. flat
+3. 实现一个 flat 函数
 4. Promise
-5. arguments 在箭头函数中没有
+5. arguments 在箭头函数中没有 ...使用
 6. es6 的使用
-7. blob createObjectURL
+7. blob & createObjectURL 兼容性问题
 
 
 浏览器
