--- a/面试/作业帮.md
+++ b/面试/作业帮.md
@@ -1,7 +1,7 @@
 CSS
 1. flex: 1 含义
 2. 左侧固定 右侧自适应 实现方式有几种
-3. 超出长度截取字符
+3. 超出长度截取字符 css实现
 4. top: 50% \ transform: 50% 有啥区别
 
 JS
@@ -13,7 +13,7 @@ Vue
 1. vue diff 过程
 2. data 函数 return 对象原因
 3. 组件通信方案
-4. prop 在子组件中修改
+4. prop 在子组件中修改会有什么问题
 5. 
 
 HTTP
