--- a/面试/4.19.md
+++ b/面试/4.19.md
@@ -32,7 +32,7 @@ class EventEmitter {
 ## 学而思 3面
 1. 小程序 多端
 2. proxy polyfill
-3. 性能优化 cdn优点 
+3. 性能优化 cdn优点 网络层 浏览器加载优化
 4. webpack 编译时 运行时 优化
 5. 
 
