--- a/面试/4.19.md
+++ b/面试/4.19.md
@@ -22,17 +22,17 @@ class EventEmitter {
 
 ## 跟谁学 2面
 1. 实现 Promise.all polyfill
-2. 实现 不定数量数组，最多同时三个请求的功能。
+2. 实现 不定数量数组，最多同时有三个请求的功能。
 3. tab 页面之间通信方式
 4. 监控 sentry
 5. webpack chunkhash contentHash hash
 6. element 按需引入如何实现
 7. 跨域
+8. 函数柯里化
 
 ## 学而思 3面
 1. 小程序 多端
 2. proxy polyfill
 3. 性能优化 cdn优点 网络层 浏览器加载优化
 4. webpack 编译时 运行时 优化
-5. 
 
